--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
     </div>
+    <div class="main-content">
+      <div id="bar"></div>
+      <div id="routeBar">
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
