--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width,maximun-scale=1.0,minimun-scale=1.0, initial-scale=1" />
+    <meta name="viewport" content="width=device-width,maximun-scale=1.0,minimun-scale=1.0, initial-scale=1,user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -30,10 +30,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-    </div>
-    <div class="main-content">
-      <div id="bar"></div>
-      <div id="routeBar">
     </div>
     <!--
       This HTML file is a template.
